--- a/project4.html
+++ b/project4.html
@@ -4,6 +4,9 @@
 <script type="text/javascript" src="./Common/webgl-utils.js"></script>
 <script type="text/javascript" src="project4.js"></script>
 
+<!--Load External triangulation library-->
+<script type="text/javascript" src="PolyK.js"></script>
+
 <script type="text/javascript" src="plan.json"></script>
 
 <script id="vertex-shader" type="x-shader/x-vertex">
