Corrected error: After creating new json points cannot be added

--- a/modeller.html
+++ b/modeller.html
@@ -53,6 +53,7 @@
         }
         if (event.keyCode == 81) {
             rooms = [{name: "NewRoom", polygon:[]}];
+            room = rooms[0];
             console.log("All Cleared");
         }
         
