q now deletes entire object

--- a/modeller.html
+++ b/modeller.html
@@ -76,7 +76,7 @@
             console.log("New Polygon");
         }
         if (event.keyCode == 81) {
-            rooms = [{name: "NewRoom", polygon:[]}];
+            rooms = [];
             room = rooms[0];
             console.log("All Cleared");
         }
