--- a/project4.html
+++ b/project4.html
@@ -80,17 +80,21 @@ void main()
 }
 </script>
 
-<htlm>
-    <center>
-    <h3>ITCS 6120 - Project4a</h3>
-    </center>
-<body>
-<canvas id="gl-canvas" width="800" height="600">
-Oops ... your browser doesn't support the HTML5 canvas element
-</canvas>
-   
-<br/>
+<html>
+    <body>
+        <div style="background-color:blue;text-align:center;text:white">
+            <h2>ITCS 6120 - Project4a</h2>
+        </div>
+        <center>
+            
+            <p>Ahmet Gencoglu - 800982227</p>
+            <p>Use the wsad keys to move and arrow keys to look around!</p>
+            <canvas id="gl-canvas" width="800" height="600">
+                Oops ... your browser doesn't support the HTML5 canvas element
+            </canvas>
+            <br/>
+            <input type="checkbox" checked onchange="uiChanged()" id="checkboxCeiling">Ceilings</input>
 
-
+        </center>
 </body>
 </html>
