--- a/project4.html
+++ b/project4.html
@@ -12,7 +12,7 @@
 <script id="vertex-shader" type="x-shader/x-vertex">
 
 attribute vec4 vPosition;
-//attribute vec4 vNormal;
+attribute vec4 vNormal;
 attribute vec4 vColor;
 varying vec4 fColor;
 
@@ -28,7 +28,7 @@ void main()
 {
 
     //vec3 vertexPosition = (modelViewMatrix *vPosition).xyz;
-    //N = normalize((modelViewMatrix * vNormal).xyz);
+    N = normalize((modelViewMatrix * vNormal).xyz);
     //L = normalize(lightPosition.xyz - vertexPosition);
     //E = -normalize(vertexPosition);
     
