--- a/project4.html
+++ b/project4.html
@@ -74,6 +74,7 @@ void main()
     //resultColor.a = 1.0; 
     
     //resultColor = vec4(N.x,N.y,N.z,1.0);
+    //resultColor = vec4(L.x,L.y,L.z,1.0);
     gl_FragColor = resultColor;  
 }
 </script>
