--- a/about.html
+++ b/about.html
@@ -54,5 +54,36 @@ Released under GNU GPL v3
              */
  </pre>
     </p>
+    <p>
+        <h3>Math.js library is used for matrix multiplication</h3>  
+        <pre>
+            /**
+             * math.js
+             * https://github.com/josdejong/mathjs
+             *
+             * Math.js is an extensive math library for JavaScript and Node.js,
+             * It features real and complex numbers, units, matrices, a large set of
+             * mathematical functions, and a flexible expression parser.
+             *
+             * @version 3.8.0
+             * @date    2016-11-18
+             *
+             * @license
+             * Copyright (C) 2013-2016 Jos de Jong <wjosdejong@gmail.com>
+             *
+             * Licensed under the Apache License, Version 2.0 (the "License"); you may not
+             * use this file except in compliance with the License. You may obtain a copy
+             * of the License at
+             *
+             * http://www.apache.org/licenses/LICENSE-2.0
+             *
+             * Unless required by applicable law or agreed to in writing, software
+             * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
+             * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
+             * License for the specific language governing permissions and limitations under
+             * the License.
+             */
+ </pre>
+    </p>
     </body>
 </html>
